--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <title>Nguyễn Thành Đạt</title>
     
 </head>
 <body>
     <header> 
         <div class="profile-image">
-            <img src="images/add.png"> 
+            <img src="add.png"> 
         </div>
         <div class="profile-info">
              <h2>Nguyễn Thành Đạt</h2>
